--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
+    "react-photo-view": "^1.2.7",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-spinners": "^0.15.0",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.2",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
