--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -27,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-otp-input": "^3.1.1",
     "react-photo-view": "^1.2.7",
     "react-redux": "^9.2.0",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
