--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-# dist
+dist
 dist-ssr
 *.local
+
+.env
+# *.env
+
 
 # Editor directories and files
 .vscode/*
@@ -23,4 +27,3 @@ dist-ssr
 *.sln
 *.sw
 
-.env
