--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
